--- a/BootcampASP/Views/Items/Index.cshtml
+++ b/BootcampASP/Views/Items/Index.cshtml
@@ -21,18 +21,11 @@
             @Html.DisplayNameFor(model => model.Price)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.CreateDate)
-        </th>
+            Supplier
+        </th>        
         <th>
-            @Html.DisplayNameFor(model => model.UpdateDate)
+            Action
         </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DeleteDate)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IsDelete)
-        </th>
-        <th></th>
     </tr>
 
 @foreach (var item in Model) {
@@ -45,25 +38,20 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Price)
-        </td>
+        </td>        
         <td>
-            @Html.DisplayFor(modelItem => item.CreateDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.UpdateDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DeleteDate)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IsDelete)
+            @Html.DisplayFor(modelItem => item.Suppliers.Name)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @*@Html.ActionLink("Details", "Details", new { id=item.Id }) |*@
+            @*@Html.ActionLink("Delete", "Delete", new { id=item.Id }, new { class = "btnDelete", @onclick = "deleteItem('@item.Id')"})*@
+            <button id="btnDelete" class="btn btn-danger" onclick="deleteItem('@item.Id')">Delete</button>
         </td>
     </tr>
 }
 
 </table>
+<script src="~/Scripts/sweetalert.min.js"></script>
+<link href="~/Content/sweetalert.css" rel="stylesheet" />
+<script src="~/Scripts/SweetDelete.js"></script>
